# wise-mise-mcp

./: .coveragerc  .gitignore  .mise.toml  COMPLETION_SUMMARY.md  Dockerfile  MANIFEST.in  README.md  USAGE.md  main.py  package-lock.json  package.json  pyproject.toml  pyproject.toml.bk  pytest-fast.ini  pytest.ini  requirements.txt  run_server.py  smithery.yaml  test_results.json  test_server.py
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  performance-monitoring.yml  release.yml
.mise/tasks/setup/: bootstrap
.smithery/: test-profile.json
config/: server-config.json
docs/: API.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  current_state_analysis.md  server-showcase.md  smithery-deployment-fix.md  transformation-summary.md  uv_migration_plan.md
example-project/: .mise.toml  README.md  package.json
example-project/.claude-flow/metrics/: performance.json  task-metrics.json
example-project/tests/: index.test.js
hive/: authorial_voice.md
hive/analysis/: project_analysis.md
hive/docs/: strategy.md
hive/quality/: standards
memory/agents/: README.md
memory/sessions/: README.md
mise_task_tools/: __init__.py  __main__.py  additional_experts.py  analyzer.py  experts.py  manager.py  models.py  server.py
scripts/: publish.py
tests/: conftest.py
tests/benchmark/: test_mcp_performance.py  test_memory_performance.py
tests/integration/: test_mcp_server.py  test_task_workflows.py
tests/integration/real_mcp_tests/: test_real_mcp_client.py
tests/performance/: test_large_projects.py
tests/security/: test_input_validation.py
tests/unit/: test_analyzer.py  test_experts.py  test_manager.py  test_models.py  test_server.py
wise_mise/: __main__.py  server.py
wise_mise_mcp/: __init__.py  __main__.py  analyzer.py  experts.py  manager.py  models.py  server.py
