[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mise-task-tools"
version = "0.1.0"
description = "MCP server for intelligent mise task management and organization"
authors = [
    {name = "Jarad DeLorenzo", email = "jarad@delorenzo.dev"}
]
dependencies = [
    "fastmcp>=0.3.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "pathlib>=1.0.0",
    "typing-extensions>=4.0.0",
    "glob2>=0.7",
    "networkx>=3.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
