[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# UV Configuration
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
package = true

[project]
name = "wise-mise-mcp"
version = "0.1.0"
description = "An intelligent MCP server for wise mise task management and organization"
authors = [
    {name = "Jarad DeLorenzo", email = "jarad@delorenzo.dev"}
]
dependencies = [
    "fastmcp>=0.3.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "pathlib>=1.0.0",
    "typing-extensions>=4.0.0",
    "glob2>=0.7",
    "networkx>=3.0",
]
requires-python = ">=3.10"

# Optional dependencies for non-UV users
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
